src/test/deca/syntax/valid/resultats/test12_decl_print-lex.res
'{': [@0,284:284='{',<36>,15:0]
IDENT: [@1,312:317='string',<26>,17:1]
IDENT: [@2,319:319='s',<26>,17:8]
'=': [@3,321:321='=',<29>,17:10]
STRING: [@4,323:329='"Hello"',<47>,17:12]
';': [@5,330:330=';',<39>,17:19]
IDENT: [@6,333:335='int',<26>,18:1]
IDENT: [@7,337:337='i',<26>,18:5]
'=': [@8,339:339='=',<29>,18:7]
INT: [@9,341:342='12',<1>,18:9]
';': [@10,343:343=';',<39>,18:11]
'println': [@11,348:354='println',<18>,20:1]
'(': [@12,355:355='(',<34>,20:8]
IDENT: [@13,356:356='s',<26>,20:9]
')': [@14,357:357=')',<35>,20:10]
';': [@15,358:358=';',<39>,20:11]
'println': [@16,361:367='println',<18>,21:1]
'(': [@17,368:368='(',<34>,21:8]
IDENT: [@18,369:369='i',<26>,21:9]
')': [@19,370:370=')',<35>,21:10]
';': [@20,371:371=';',<39>,21:11]
'}': [@21,373:373='}',<37>,22:0]
