src/test/deca/syntax/invalid/resultats/test11_float-lex.res
'{': [@0,346:346='{',<36>,15:0]
'print': [@1,349:353='print',<17>,16:1]
'(': [@2,354:354='(',<34>,16:6]
'.': [@3,355:355='.',<32>,16:7]
INT: [@4,356:356='4',<1>,16:8]
')': [@5,357:357=')',<35>,16:9]
';': [@6,358:358=';',<39>,16:10]
'}': [@7,360:360='}',<37>,17:0]
